--- a/velocityGraphicsInstalls.html
+++ b/velocityGraphicsInstalls.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>Velocity Graphics Installs</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
   <header>
     <div class="wrapper">
       <div>
-
+          <h1>Test</h1>
       </div>
       <nav>
         <ul>
